--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@
 # DATABASE_URL=mysql://buffy_clicker:buffyClicker098@buffy-db.cxmiq80aa5gq.us-east-2.rds.amazonaws.com/buffy-database
 # SHADOW_DATABASE_URL=mysql://buffy_clicker:buffyClicker098@buffy-db.cxmiq80aa5gq.us-east-2.rds.amazonaws.com/buffyDatabase
 
-DATABASE_URL=mysql://admin:Mellamoleo26.@database-1.cly0026e4bmm.us-east-2.rds.amazonaws.com/database-1
+DATABASE_URL=mysql://admin:Mellamoleo26.@database-1.cly0026e4bmm.us-east-2.rds.amazonaws.com
 # SHADOW_DATABASE_URL=mysql://buffy_clicker:buffyClicker098@buffy-db.cxmiq80aa5gq.us-east-2.rds.amazonaws.com/buffyDatabase
 
 # DATABASE_URL=mysql://sql3717441:rYhc35vib9@sql3.freesqldatabase.com:3306/sql3717441
