--- a/src/images/tonconnect-manifest.json
+++ b/src/images/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "",
-    "name": "Geto Tap",
+    "name": "Liboo App",
     "iconUrl": "https://github.com/vshaltd/kdf/blob/main/public/logoforton.png"
   }
