--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@tonconnect/ui-react": "^2.0.6",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.411.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.10.4",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.1.0",
     "react-icons": "^5.2.1",
