--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@firebase/firestore": "^4.6.3",
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@plasmicapp/loader-react": "^1.0.364",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
