--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.77.6",
     "styled-components": "^6.1.11",
     "tailwindcss": "^3.4.3",
+    "framer-motion": "^11.3.18",
     "telegraf": "^4.16.3",
     "use-sound": "^4.0.3",
     "uuid": "^9.0.1",
