--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "telegraf": "^4.16.3",
     "use-sound": "^4.0.3",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "date-fns": "3.6.0",
   },
   "scripts": {
     "start": "react-scripts start",
