--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "use-sound": "^4.0.3",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
-    "date-fns": "3.6.0",
+    "date-fns": "3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
